[package]
name = "poparazzi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = ["gzip", "futures-io"] }
chrono = "0.4"
deb-control-codec = "1.0.1"
deb-version = "0.1"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
html-escape = "0.2"
log = "0.4"
octocrab = { version = "0.49", features = ["stream"] }
reqwest = { version = "0.13", features = ["stream"] }
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
